# OryxEngine

./: .gitignore  CMakeLists.txt  README  rebuildall.sh
media/materials/: .gitignore  Debug.material
media/textures/: .placeholder
samples/: CMakeLists.txt  README
samples/gltest/: CMakeLists.txt  main.cpp
src/: .gitignore  CMakeLists.txt  FastDelegate.h  Oryx.h  Oryx3DMath.h  OryxBox.cpp  OryxBox.h  OryxBucket.cpp  OryxBucket.h  OryxColor.cpp  OryxColor.h  OryxColour.cpp  OryxColour.h  OryxEngine.cpp  OryxEngine.h  OryxEngine.scons  OryxEngineSubsystem.h  OryxEventHandler.cpp  OryxEventHandler.h  OryxException.h  OryxGameState.cpp  OryxGameState.h  OryxIntersect.cpp  OryxIntersect.h  OryxLogger.cpp  OryxLogger.h  OryxMatrix3.cpp  OryxMatrix3.h  OryxMatrix4.cpp  OryxMatrix4.h  OryxMeshData.h  OryxMessage.h  OryxMessageAny.h  OryxObject.cpp  OryxObject.h  OryxPlane.h  OryxQuaternion.cpp  OryxQuaternion.h  OryxRand.cpp  OryxRand.h  (+21 more)
src/ALSubsystem/: ALSubsystem.cpp  ALSubsystem.h  ALSubsystem.scons  ALdllmain.cpp  ALdllmain.h  ActiveSound.cpp  ActiveSound.h  AudioLoader.h  AudioStream.h  BufferedSound.cpp  BufferedSound.h  CMakeLists.txt  OggLoader.cpp  OggLoader.h  OggStream.cpp  OggStream.h  SConstruct  Sound.cpp  Sound.h  SoundPtr.cpp  SoundPtr.h  StreamedSound.cpp  StreamedSound.h  WavLoader.cpp  WavLoader.h  WavStream.cpp  WavStream.h
src/BulletSubsystem/: .gitignore  BulletConversions.cpp  BulletConversions.h  BulletSubsystem.cpp  BulletSubsystem.h  BulletSubsystem.scons  Bulletdllmain.cpp  Bulletdllmain.h  CMakeLists.txt  CharPrimitive.cpp  CharPrimitive.h  CharacterController.h  CollisionObject.cpp  CollisionObject.h  Hinge.h  Joint.cpp  Joint.h  PhysicsBoxShape.cpp  PhysicsBoxShape.h  PhysicsCapsuleShape.cpp  PhysicsCapsuleShape.h  PhysicsCompoundShape.cpp  PhysicsCompoundShape.h  PhysicsConvexShape.cpp  PhysicsConvexShape.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsShape.cpp  PhysicsShape.h  PhysicsSphereShape.cpp  PhysicsSphereShape.h  PhysicsTrimeshShape.cpp  PhysicsTrimeshShape.h  QuantaController.cpp  QuantaController.h  RaycastReport.h  RigidBody.cpp  RigidBody.h  SConstruct
src/ChaiscriptSubsystem/: CMakeLists.txt  ChaiWrapper.h  Chaidllmain.cpp  Chaidllmain.h  ChaiscriptSubsystem.cpp  ChaiscriptSubsystem.h  ChaiscriptSubsystem.scons  SConstruct
src/ENetSubsystem/: Client.cpp  Client.h  ENetSubsystem.cpp  ENetSubsystem.h  ENetSubsystem.scons  ENetdllmain.cpp  ENetdllmain.h  Packet.cpp  Packet.h  SConstruct  Server.cpp  Server.h
src/GLSubsystem/: CMakeLists.txt  Camera.cpp  Camera.h  GLPlatformContext.h  GLSubsystem.cpp  GLSubsystem.h  GLXPlatformContext.cpp  GLXPlatformContext.h  GLdllmain.cpp  GLdllmain.h  Mesh.cpp  Mesh.h  SceneNode.cpp  SceneNode.h
src/GUISubsystem/: CMakeLists.txt  GUIBatch.cpp  GUIBatch.h  GUIButton.cpp  GUIButton.h  GUICaption.cpp  GUICaption.h  GUIElement.cpp  GUIElement.h  GUIEmpty.cpp  GUIEmpty.h  GUIPanel.cpp  GUIPanel.h  GUISubsystem.cpp  GUISubsystem.h  GUIdllmain.h
src/LuaSubsystem/: CMakeLists.txt  LuaSubsystem.cpp  LuaSubsystem.h  LuaSubsystem.scons  LuaWrapper.h  Luadllmain.cpp  Luadllmain.h  SConstruct
src/OISSubsystem/: CMakeLists.txt  OISListener.cpp  OISListener.h  OISSubsystem.cpp  OISSubsystem.h  OISSubsystem.scons  OISdllmain.cpp  OISdllmain.h  SConstruct
src/OgreSubsystem/: .gitignore  BillboardSet.cpp  BillboardSet.h  CMakeLists.txt  Camera.cpp  Camera.h  CustomMesh.cpp  CustomMesh.h  CustomRenderSequence.cpp  CustomRenderSequence.h  CustomRenderSequenceListener.cpp  CustomRenderSequenceListener.h  Decal.cpp  Decal.h  GUI.cpp  GUI.h  GUIButton.cpp  GUIButton.h  GUIElement.cpp  GUIElement.h  GUIEmpty.cpp  GUIEmpty.h  GUIRectangle.cpp  GUIRectangle.h  GUIScreen.cpp  GUIScreen.h  GUIStaticText.cpp  GUIStaticText.h  GUIText.cpp  GUIText.h  Gorilla.cpp  Gorilla.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OgreConversions.cpp  OgreConversions.h  (+14 more)
src/SDLSubsystem/: CMakeLists.txt  SConstruct  SDLSubsystem.cpp  SDLSubsystem.h  SDLSubsystem.scons  SDLdllmain.cpp  SDLdllmain.h
src/UnitTests/: .gitignore  CMakeLists.txt  OryxColorTest.cpp  OryxColourTest.cpp  OryxStringUtilsTest.cpp  OryxTests.cpp  SConstruct
src/Versus/: Chunk.cpp  Chunk.h  ChunkCoords.h  ChunkManager.cpp  ChunkManager.h  ChunkUtils.h  ExplosionManager.cpp  FPSCamera.cpp  PhysicsBlock.cpp  PhysicsBlock.h  SConstruct  Versus.cpp  Versus.scons  VersusGameState.cpp  VersusGameState.h
